# cv

./: db.sqlite3  pyproject.toml
cv/: settings.py  urls.py
login/: urls.py  views.py
resume/: admin.py  forms.py  models.py  urls.py  views.py
resume/migrations/: 0001_initial.py  0002_alter_name_date_created_alter_name_date_updated.py
resume/templates/: display.html  forms.html  index.html  oyebola.html  personal.html
