[tool.poetry]
name = "curriculum vitae"
version = "0.1.0"
description = "creating a resume app"
authors = ["Chiko Liu"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-crispy-forms = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
